--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "      <td>14.06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Other/Non-Disclosed</th>\n",
+       "      <th>Other / Non-Disclosed</th>\n",
        "      <td>11</td>\n",
        "      <td>1.91</td>\n",
        "    </tr>\n",
@@ -425,13 +425,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                     Total Count  Percentage of Players\n",
-       "Male                         484                  84.03\n",
-       "Female                        81                  14.06\n",
-       "Other/Non-Disclosed           11                   1.91"
+       "                       Total Count  Percentage of Players\n",
+       "Male                           484                  84.03\n",
+       "Female                          81                  14.06\n",
+       "Other / Non-Disclosed           11                   1.91"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,6 @@
     "# This does not add up to the total number of players\n",
     "# gender_count = purchase_data['Gender'].value_counts()\n",
     "# gender_df = pd.DataFrame(gender_count)\n",
-    "\n",
     "gender_count = purchase_data[['Gender', 'SN']].drop_duplicates()\n",
     "gender_df = gender_count['Gender'].value_counts()\n",
     "gender_list = [gender_df[0], gender_df[1], gender_df[2]]\n",
@@ -449,7 +448,7 @@
     "                  100*gender_df[2]/total_players]\n",
     "gender_table = pd.DataFrame({'Total Count':gender_list,\n",
     "                            'Percentage of Players': gender_percent},\n",
-    "                           index=['Male', 'Female', 'Other/Non-Disclosed'])\n",
+    "                           index=['Male', 'Female', 'Other / Non-Disclosed'])\n",
     "gender_table.round(2)"
    ]
   },
@@ -481,10 +480,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Female</th>\n",
+       "      <td>113</td>\n",
+       "      <td>3.203009</td>\n",
+       "      <td>361.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>652</td>\n",
+       "      <td>3.017853</td>\n",
+       "      <td>1967.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other / Non-Disclosed</th>\n",
+       "      <td>15</td>\n",
+       "      <td>3.346000</td>\n",
+       "      <td>50.19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Purchase Count  Average Purchase Price  \\\n",
+       "Female                            113                3.203009   \n",
+       "Male                              652                3.017853   \n",
+       "Other / Non-Disclosed              15                3.346000   \n",
+       "\n",
+       "                       Total Purchase Value  \n",
+       "Female                               361.94  \n",
+       "Male                                1967.64  \n",
+       "Other / Non-Disclosed                 50.19  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gender_analysis = purchase_data.groupby(['Gender'])\n",
+    "count_by_gender = gender_analysis['SN'].count()\n",
+    "avg_price_gender = gender_analysis['Price'].mean()\n",
+    "gender_purchase = gender_analysis['Price'].sum()\n",
+    "\n",
+    "#check values individually\n",
+    "#count_by_gender\n",
+    "#avg_price_gender\n",
+    "#gender_purchase\n",
+    "\n",
+    "summary_gender = pd.DataFrame({'Purchase Count': count_by_gender,\n",
+    "                        'Average Purchase Price': avg_price_gender,\n",
+    "                        'Total Purchase Value': gender_purchase},\n",
+    "                        index=['Female', 'Male','Other / Non-Disclosed'])\n",
+    "\n",
+    "summary_gender\n"
+   ]
   },
   {
    "cell_type": "markdown",
