--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -546,7 +546,7 @@
        "Other / Non-Disclosed                 50.19  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,6 +556,7 @@
     "count_by_gender = gender_analysis['SN'].count()\n",
     "avg_price_gender = gender_analysis['Price'].mean()\n",
     "gender_purchase = gender_analysis['Price'].sum()\n",
+    "\n",
     "\n",
     "#check values individually\n",
     "#count_by_gender\n",
@@ -601,10 +602,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase ID</th>\n",
+       "      <th>SN</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Age Ranges</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Lisim78</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>108</td>\n",
+       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
+       "      <td>3.53</td>\n",
+       "      <td>15-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Lisovynya38</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>143</td>\n",
+       "      <td>Frenzied Scimitar</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>40+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ithergue48</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>4.88</td>\n",
+       "      <td>20-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Chamassasya86</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Blindscythe</td>\n",
+       "      <td>3.27</td>\n",
+       "      <td>20-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Iskosia90</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>131</td>\n",
+       "      <td>Fury</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>20-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>775</th>\n",
+       "      <td>775</td>\n",
+       "      <td>Aethedru70</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>60</td>\n",
+       "      <td>Wolf</td>\n",
+       "      <td>3.54</td>\n",
+       "      <td>20-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>776</th>\n",
+       "      <td>776</td>\n",
+       "      <td>Iral74</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>164</td>\n",
+       "      <td>Exiled Doomblade</td>\n",
+       "      <td>1.63</td>\n",
+       "      <td>20-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>777</th>\n",
+       "      <td>777</td>\n",
+       "      <td>Yathecal72</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>67</td>\n",
+       "      <td>Celeste, Incarnation of the Corrupted</td>\n",
+       "      <td>3.46</td>\n",
+       "      <td>15-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>778</th>\n",
+       "      <td>778</td>\n",
+       "      <td>Sisur91</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>4.19</td>\n",
+       "      <td>&lt;10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>779</th>\n",
+       "      <td>779</td>\n",
+       "      <td>Ennrian78</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>50</td>\n",
+       "      <td>Dawn</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>20-24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>780 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Purchase ID             SN  Age  Gender  Item ID  \\\n",
+       "0              0        Lisim78   20    Male      108   \n",
+       "1              1    Lisovynya38   40    Male      143   \n",
+       "2              2     Ithergue48   24    Male       92   \n",
+       "3              3  Chamassasya86   24    Male      100   \n",
+       "4              4      Iskosia90   23    Male      131   \n",
+       "..           ...            ...  ...     ...      ...   \n",
+       "775          775     Aethedru70   21  Female       60   \n",
+       "776          776         Iral74   21    Male      164   \n",
+       "777          777     Yathecal72   20    Male       67   \n",
+       "778          778        Sisur91    7    Male       92   \n",
+       "779          779      Ennrian78   24    Male       50   \n",
+       "\n",
+       "                                     Item Name  Price Age Ranges  \n",
+       "0    Extraction, Quickblade Of Trembling Hands   3.53      15-19  \n",
+       "1                            Frenzied Scimitar   1.56        40+  \n",
+       "2                                 Final Critic   4.88      20-24  \n",
+       "3                                  Blindscythe   3.27      20-24  \n",
+       "4                                         Fury   1.44      20-24  \n",
+       "..                                         ...    ...        ...  \n",
+       "775                                       Wolf   3.54      20-24  \n",
+       "776                           Exiled Doomblade   1.63      20-24  \n",
+       "777      Celeste, Incarnation of the Corrupted   3.46      15-19  \n",
+       "778                               Final Critic   4.19        <10  \n",
+       "779                                       Dawn   4.60      20-24  \n",
+       "\n",
+       "[780 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#min_age = purchase_data['Age'].min()\n",
+    "#max_age = purchase_data['Age'].max()\n",
+    "#used these to check the min and max ages\n",
+    "#min_age, 7\n",
+    "#max_age, 45\n",
+    "\n",
+    "bins = [0, 9.99, 14.99, 20.99, 24.99, 29.99, 34.99, 39.99, 100]\n",
+    "bin_name = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\",\n",
+    "           \"35-39\", \"40+\"]\n",
+    "purchase_data['Age Ranges'] = pd.cut(purchase_data['Age'], bins,\n",
+    "                    labels=bin_name)\n",
+    "purchase_data\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -634,10 +841,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age Ranges\n",
+       "<10       23\n",
+       "10-14     28\n",
+       "15-19    235\n",
+       "20-24    266\n",
+       "25-29    101\n",
+       "30-34     73\n",
+       "35-39     41\n",
+       "40+       13\n",
+       "Name: Purchase ID, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "age_demographic = purchase_data.groupby('Age Ranges')\n",
+    "age_range_count = age_demographic['Purchase ID'].count()\n",
+    "age_avg_purch = age_demographic['Price'].mean()\n",
+    "age_purch_total = age_demographic['Price'].sum()\n",
+    "\n",
+    "age_range_count\n",
+    "#age_avg_purch\n",
+    "#age_purch_total\n",
+    "\n",
+    "#summary_age = pd.DataFrame({'Purchase Count': age_range_count,\n",
+    "#                            'Average Purchase Price': age_avg_purch, \n",
+    "#                            'Total Purchase Value':age_purch_total},\n",
+    "#                           index=['Female', 'Male','Other / Non-Disclosed'])\n",
+    "#summary_age"
+   ]
   },
   {
    "cell_type": "markdown",
