--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -285,58 +285,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Number of Unique Items</th>\n",
-       "      <th>Average Price</th>\n",
-       "      <th>Number of Purchases</th>\n",
-       "      <th>Total Revenue</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>179</td>\n",
-       "      <td>3.05</td>\n",
-       "      <td>780</td>\n",
-       "      <td>2379.77</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Number of Unique Items  Average Price  Number of Purchases  Total Revenue\n",
-       "1                     179           3.05                  780        2379.77"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'purchase_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m-----------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m     Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-dc910f4b4059>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0munique_items\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpurchase_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Item Name'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnunique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mavg_price\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpurchase_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Price'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mnum_purchases\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpurchase_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Purchase ID'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnunique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mtotal_revenue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpurchase_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Price'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'purchase_data' is not defined"
+     ]
     }
    ],
    "source": [
@@ -841,25 +804,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>23</td>\n",
+       "      <td>3.353478</td>\n",
+       "      <td>77.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10-14</th>\n",
+       "      <td>28</td>\n",
+       "      <td>2.956429</td>\n",
+       "      <td>82.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15-19</th>\n",
+       "      <td>235</td>\n",
+       "      <td>3.094511</td>\n",
+       "      <td>727.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20-24</th>\n",
+       "      <td>266</td>\n",
+       "      <td>3.006541</td>\n",
+       "      <td>799.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25-29</th>\n",
+       "      <td>101</td>\n",
+       "      <td>2.900990</td>\n",
+       "      <td>293.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30-34</th>\n",
+       "      <td>73</td>\n",
+       "      <td>2.931507</td>\n",
+       "      <td>214.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35-39</th>\n",
+       "      <td>41</td>\n",
+       "      <td>3.601707</td>\n",
+       "      <td>147.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40+</th>\n",
+       "      <td>13</td>\n",
+       "      <td>2.941538</td>\n",
+       "      <td>38.24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Age Ranges\n",
-       "<10       23\n",
-       "10-14     28\n",
-       "15-19    235\n",
-       "20-24    266\n",
-       "25-29    101\n",
-       "30-34     73\n",
-       "35-39     41\n",
-       "40+       13\n",
-       "Name: Purchase ID, dtype: int64"
+       "       Purchase Count  Average Purchase Price  Total Purchase Value\n",
+       "<10                23                3.353478                 77.13\n",
+       "10-14              28                2.956429                 82.78\n",
+       "15-19             235                3.094511                727.21\n",
+       "20-24             266                3.006541                799.74\n",
+       "25-29             101                2.900990                293.00\n",
+       "30-34              73                2.931507                214.00\n",
+       "35-39              41                3.601707                147.67\n",
+       "40+                13                2.941538                 38.24"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,15 +909,16 @@
     "age_avg_purch = age_demographic['Price'].mean()\n",
     "age_purch_total = age_demographic['Price'].sum()\n",
     "\n",
-    "age_range_count\n",
+    "#age_range_count\n",
     "#age_avg_purch\n",
     "#age_purch_total\n",
     "\n",
-    "#summary_age = pd.DataFrame({'Purchase Count': age_range_count,\n",
-    "#                            'Average Purchase Price': age_avg_purch, \n",
-    "#                            'Total Purchase Value':age_purch_total},\n",
-    "#                           index=['Female', 'Male','Other / Non-Disclosed'])\n",
-    "#summary_age"
+    "summary_age = pd.DataFrame({'Purchase Count': age_range_count,\n",
+    "                            'Average Purchase Price': age_avg_purch, \n",
+    "                            'Total Purchase Value':age_purch_total},\n",
+    "                           index=[\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\",\n",
+    "           \"35-39\", \"40+\"])\n",
+    "summary_age"
    ]
   },
   {
@@ -910,10 +950,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "top_spenders = purchase_data['Item ID'].groupby(purchase_data['SN']).count()\n",
+    "\n",
+    "top_spenders_df = pd.DataFrame(data=top_spenders)\n",
+    "top_spenders_df.columns = ['Purchase Count']\n",
+    "top_spenders_df['Average Purchase Price'] = purchase_data['Price'].groupby(purchase_data['SN']).mean()\n",
+    "top_spenders_df['Total Purchase Value'] = purchase_data['Price'].groupby(purchase_data['SN']).sum()\n",
+    "\n",
+    "top_spenders_df.sort_values(by=['Total Purchase Value'], ascending=False,\n",
+    "                           inplace=True)"
+   ]
   },
   {
    "cell_type": "markdown",
