--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -285,21 +285,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'purchase_data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m-----------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m     Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-dc910f4b4059>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0munique_items\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpurchase_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Item Name'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnunique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mavg_price\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpurchase_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Price'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mnum_purchases\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpurchase_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Purchase ID'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnunique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mtotal_revenue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpurchase_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Price'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'purchase_data' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Number of Unique Items</th>\n",
+       "      <th>Average Price</th>\n",
+       "      <th>Number of Purchases</th>\n",
+       "      <th>Total Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>179</td>\n",
+       "      <td>3.05</td>\n",
+       "      <td>780</td>\n",
+       "      <td>2379.77</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Number of Unique Items  Average Price  Number of Purchases  Total Revenue\n",
+       "1                     179           3.05                  780        2379.77"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -804,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +935,7 @@
        "40+                13                2.941538                 38.24"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,9 +987,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SN</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Lisosia93</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3.792000</td>\n",
+       "      <td>18.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Idastidru52</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3.862500</td>\n",
+       "      <td>15.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chamjask73</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4.610000</td>\n",
+       "      <td>13.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iral74</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3.405000</td>\n",
+       "      <td>13.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iskadarya95</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4.366667</td>\n",
+       "      <td>13.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ililsasya43</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.020000</td>\n",
+       "      <td>1.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Irilis75</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.020000</td>\n",
+       "      <td>1.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Aidai61</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.010000</td>\n",
+       "      <td>1.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chanirra79</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.010000</td>\n",
+       "      <td>1.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alo38</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>576 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Purchase Count  Average Purchase Price  Total Purchase Value\n",
+       "SN                                                                       \n",
+       "Lisosia93                 5                3.792000                 18.96\n",
+       "Idastidru52               4                3.862500                 15.45\n",
+       "Chamjask73                3                4.610000                 13.83\n",
+       "Iral74                    4                3.405000                 13.62\n",
+       "Iskadarya95               3                4.366667                 13.10\n",
+       "...                     ...                     ...                   ...\n",
+       "Ililsasya43               1                1.020000                  1.02\n",
+       "Irilis75                  1                1.020000                  1.02\n",
+       "Aidai61                   1                1.010000                  1.01\n",
+       "Chanirra79                1                1.010000                  1.01\n",
+       "Alo38                     1                1.000000                  1.00\n",
+       "\n",
+       "[576 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "top_spenders = purchase_data['Item ID'].groupby(purchase_data['SN']).count()\n",
     "\n",
@@ -961,8 +1125,7 @@
     "top_spenders_df['Average Purchase Price'] = purchase_data['Price'].groupby(purchase_data['SN']).mean()\n",
     "top_spenders_df['Total Purchase Value'] = purchase_data['Price'].groupby(purchase_data['SN']).sum()\n",
     "\n",
-    "top_spenders_df.sort_values(by=['Total Purchase Value'], ascending=False,\n",
-    "                           inplace=True)"
+    "top_spenders_df.sort_values(by=['Total Purchase Value'], ascending=False)"
    ]
   },
   {
@@ -997,10 +1160,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.items of                                                             count    sum\n",
+       "Item ID Item Name                                    Price              \n",
+       "0       Splinter                                     1.28       4   5.12\n",
+       "1       Crucifer                                     1.99       1   1.99\n",
+       "                                                     3.26       3   9.78\n",
+       "2       Verdict                                      2.48       6  14.88\n",
+       "3       Phantomlight                                 2.49       6  14.94\n",
+       "...                                                           ...    ...\n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm 4.23      12  50.76\n",
+       "179     Wolf, Promise of the Moonwalker              4.48       6  26.88\n",
+       "181     Reaper's Toll                                1.66       5   8.30\n",
+       "182     Toothpick                                    4.03       3  12.09\n",
+       "183     Dragon's Greatsword                          1.09       3   3.27\n",
+       "\n",
+       "[183 rows x 2 columns]>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "popular_items = purchase_data.groupby(['Item ID', 'Item Name', 'Price'])['Price'].agg(['count', 'sum'])\n",
+    "popular_items.columns = ['Purchase Count','Total Purchase Value']\n",
+    "popular.items"
+   ]
   },
   {
    "cell_type": "markdown",
